--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id="titlediv"></div>
         <h1>Emilien Marotta</h1>
         <div id="subtitle">
-            <p>Math & Computer Science Student</p>
+            <p>Étudiant en Mathématiques & Informatique</p>
         </div>
-        <button id="btn" onclick="switch_theme()"><img title="Switch theme" id="img_theme" src="Index/darktheme.png" alt="Switch theme"></button>
+        <button id="btn_mode" onclick="switch_theme()"><img title="Switch theme" id="img_theme" src="Index/darktheme.png" alt="Switch theme"></button>
         <div id="networks">
             <a title="My GitHub account" class="net_box" id="github" href="https://github.com/emilienmarotta"><img id="img_github" src="Index/github.png" alt="github logo"/><div class="background" id="github_background"></div></a>
             <a title="My RootMe account" class="net_box" id="rootme" href="https://www.root-me.org/EmilienMrtt"><img id="img_rootme" src="Index/rootme.png" alt="rootme logo"><div class="background" id="rootme_background"></div></a>
@@ -25,9 +25,9 @@
         <div id="sup">
             <a title="Contact me" class="net_box" id="email" href="mailto:emilien.marotta@gmail.com"><img id="img_email" src="Index/email.png" alt="email logo"><div class="background" id="email_background"></div></a>
         </div>
-        <div id="under_construction">
+        <footer id="under_construction">
             <p>Website under construction<span id="loading"></span></p>
-        </div>
-        <script>default_theme()</script>
+        </footer>
+        <script>default_theme();</script>
     </body>
 </html>
