--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <div id="subtitle">
             <p>Étudiant en Mathématiques & Informatique</p>
         </div>
+        <nav>
+            <ul>
+                <li id="project">Projet professionnel</li>
+            </ul>
+        </nav>
         <button id="btn_mode" onclick="switch_theme()"><img title="Switch theme" id="img_theme" src="Index/darktheme.png" alt="Switch theme"></button>
         <div id="networks">
             <a title="My GitHub account" class="net_box" id="github" href="https://github.com/emilienmarotta"><img id="img_github" src="Index/github.png" alt="github logo"/><div class="background" id="github_background"></div></a>
@@ -25,9 +30,6 @@
         <div id="sup">
             <a title="Contact me" class="net_box" id="email" href="mailto:emilien.marotta@gmail.com"><img id="img_email" src="Index/email.png" alt="email logo"><div class="background" id="email_background"></div></a>
         </div>
-        <footer id="under_construction">
-            <p>Website under construction<span id="loading"></span></p>
-        </footer>
         <script>default_theme();</script>
     </body>
 </html>
